# facade

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.json  download.sh  facade_config.json  main.cc
.github/workflow/: main.yml
.github/workflows/: main.yml
cache/: huxiu-rss.xml  ithome-rss.xml  kuaishou.html  the-paper.json
common/: utilities.cc  utilities.h
controllers/: dailyhot_Newsfeed.cc  dailyhot_Newsfeed.h  news_sources.cc  news_sources.h  web_crawler.cc  web_crawler.h
models/: model.json
plugins/: ContentCapture.cc  ContentCapture.h
test/: CMakeLists.txt
views/: FileUpload.csp
